tests/files/parser_tests/should_fail/095.cmdr
//Should not parse write statement when incorrectly written
write "hello" "myfile.txt";